# ledcmd_ubus

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
led_cli/: .gitignore  CMakeLists.txt  Makefile  ledcmd_cli.c
led_daemon/: .gitignore  CMakeLists.txt  Makefile  flash_types.c  flash_types.h  iterate_files.c  led_aliases.c  led_colours.c  led_colours.h  led_control.c  led_control.h  led_daemon_ubus.c  led_daemon_ubus.h  led_lock.c  led_pattern_control.c  led_pattern_control.h  led_pattern_list.h  led_patterns.c  led_patterns.h  led_priorities.c  led_priority_context.c  led_priority_context.h  led_states.c  led_states.h  ledcmd_daemon.c  platform_leds_plugin.h  platform_specific.h
led_daemon/include/: CMakeLists.txt  flash_types.h  iterate_files.h  led_aliases.h  led_colours.h  led_control.h  led_daemon_ubus.h  led_lock.h  led_patterns.h  led_priorities.h  led_priority_context.h  led_states.h  platform_leds_plugin.h  platform_specific.h  priorities.h
led_daemon/include/led_daemon/: led_aliases.h  led_control.h  led_daemon_ubus.h  led_lock.h  led_pattern_control.h  led_pattern_list.h  led_patterns.h  led_priorities.h  led_states.h  platform_leds_plugin.h  priorities.h
led_daemon/led_aliases/: CMakeLists.txt  led_aliases.json  test_aliases.json  wdr4300.json
led_daemon/led_patterns/: CMakeLists.txt  patterns.json  wdr4300.json
led_daemon/src/: CMakeLists.txt  flash_types.c  iterate_files.c  led_aliases.c  led_colours.c  led_control.c  led_daemon_ubus.c  led_lock.c  led_pattern_control.c  led_patterns.c  led_priorities.c  led_priority_context.c  led_states.c  ledcmd_daemon.c  platform_leds_plugin.c  priorities.c
led_daemon_backends/sysfs/: CMakeLists.txt  Makefile  led_sysfs.c
led_daemon_backends/test/: CMakeLists.txt  Makefile  led_test.c
led_pattern/: .gitignore  CMakeLists.txt  Makefile  led_pattern.c
lib_led/: CMakeLists.txt  Makefile  lib_led.c  lib_led.h  lib_led_control.c  lib_led_control.h  lib_led_pattern.c  lib_led_pattern.h  lib_led_private.h  string_constants.c
lib_led/include/: lib_led.h  lib_led_control.h  string_constants.h
lib_led/include/lib_led/: lib_led.h  lib_led_control.h  lib_led_pattern.h  string_constants.h
lib_led/src/: lib_led.c  lib_led_control.c  lib_led_pattern.c  lib_led_private.h  string_constants.c
lib_log/: CMakeLists.txt  Makefile  log.h  logging_plugin.h
lib_log/include/: log.h  logging_plugin.h
lib_log/include/lib_log/: log.h
lib_log/src/: lib_log.c
logging_stderr/: CMakeLists.txt  Makefile  logging_stderr.c
schema/: get.schema  list.schema  lock.schema  set.json  set_mode.schema  sim_changed_event.schema  templates.schema
